clusters/xs4/kube/media/photoprism/photoprism.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals/iphonexs
          name: iphonexs
        - mountPath: /photoprism/storage
          name: storage
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: iphonexs
        nfs:
          path: /mnt/nfs_data/media/photos/iphonexs
          # readOnly: true
          server: 192.168.80.250
      # - name: import
      #   nfs:
      #     path: /import
      #     server: my.nas.host
      - name: storage
        nfs:
          path: /mnt/nfs_data/apps/photoprism
          server: 192.168.80.250
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # For nginx ingress controller:
    kubernetes.io/ingress.class: nginx
    # Default is very low so most photo uploads will fail:
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    # If using cert-manager:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #kubernetes.io/tls-acme: "true"
  name: photoprism
  namespace: photoprism
spec:
  ingressClassName: nginx
  rules:
  - host: pic.groeneveld.xyz
    http:
      paths:
      - backend:
          service:
            name: photoprism
            port:
              name: http
        path: /
        pathType: Prefix
  # tls:
  # - hosts:
  #   - photoprism.my.domain
  #   secretName: photoprism-tls-cert
